Day6: Selenium, Crawling

--- a/selenium_basic.ipynb
+++ b/selenium_basic.ipynb
@@ -12,6 +12,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "e821ac8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import selenium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e6cc8334",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__builtins__',\n",
+       " '__cached__',\n",
+       " '__doc__',\n",
+       " '__file__',\n",
+       " '__loader__',\n",
+       " '__name__',\n",
+       " '__package__',\n",
+       " '__path__',\n",
+       " '__spec__',\n",
+       " '__version__']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(selenium)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 54,
    "id": "ddfb2ea5-dd92-4f29-80cf-da363652f5c6",
    "metadata": {},
@@ -170,9 +210,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "kwlee",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "kwlee"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -184,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
