--- a/Day6_240723.ipynb
+++ b/Day6_240723.ipynb
@@ -2,15 +2,906 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'List' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m a\u001b[38;5;241m=\u001b[39m\u001b[43mList\u001b[49m(\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m43\u001b[39m,\u001b[38;5;241m23\u001b[39m,\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      2\u001b[0m a\u001b[38;5;241m.\u001b[39mreverse()\n\u001b[0;32m      3\u001b[0m a\u001b[38;5;241m.\u001b[39mx\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'List' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "a=List(2,43,23,1)\n",
+    "a.reverse()\n",
+    "a.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "al=[6,5,4,2,3,1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "[1, 2, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "cnt=0\n",
+    "for idx in range(len(al)-1):\n",
+    "    for i in range(idx):\n",
+    "        if al[i] > al[i+1]:\n",
+    "            al[i+1], al[i] = al[i], al[i+1]\n",
+    "        cnt += 1\n",
+    "print(cnt)\n",
+    "print(al)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sort(self):\n",
+    "    for idx in range(len(self.x)-1,-1,-1):\n",
+    "        for i in range(idx):\n",
+    "            if self.x[i] > self.x[i+1]:\n",
+    "                self.x[i], self.x[i+1] = self.x[i+1], self.x[i]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__add__',\n",
+       " '__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__getnewargs__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'capitalize',\n",
+       " 'casefold',\n",
+       " 'center',\n",
+       " 'count',\n",
+       " 'encode',\n",
+       " 'endswith',\n",
+       " 'expandtabs',\n",
+       " 'find',\n",
+       " 'format',\n",
+       " 'format_map',\n",
+       " 'index',\n",
+       " 'isalnum',\n",
+       " 'isalpha',\n",
+       " 'isascii',\n",
+       " 'isdecimal',\n",
+       " 'isdigit',\n",
+       " 'isidentifier',\n",
+       " 'islower',\n",
+       " 'isnumeric',\n",
+       " 'isprintable',\n",
+       " 'isspace',\n",
+       " 'istitle',\n",
+       " 'isupper',\n",
+       " 'join',\n",
+       " 'ljust',\n",
+       " 'lower',\n",
+       " 'lstrip',\n",
+       " 'maketrans',\n",
+       " 'partition',\n",
+       " 'removeprefix',\n",
+       " 'removesuffix',\n",
+       " 'replace',\n",
+       " 'rfind',\n",
+       " 'rindex',\n",
+       " 'rjust',\n",
+       " 'rpartition',\n",
+       " 'rsplit',\n",
+       " 'rstrip',\n",
+       " 'split',\n",
+       " 'splitlines',\n",
+       " 'startswith',\n",
+       " 'strip',\n",
+       " 'swapcase',\n",
+       " 'title',\n",
+       " 'translate',\n",
+       " 'upper',\n",
+       " 'zfill']"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##Str의 class 구현\n",
+    "\n",
+    "#문자열 명령어 정리\n",
+    "dir('asdfasdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'asdf'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#영문 인코딩\n",
+    "'asdf'.encode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "b'\\xed\\x95\\x9c\\xea\\xb8\\x80'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#한글 인코딩\n",
+    "'한글'.encode('utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnicodeDecodeError",
+     "evalue": "'cp949' codec can't decode byte 0xed in position 0: illegal multibyte sequence",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m                        Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[18], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m한글\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencode\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mutf-8\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcp949\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mUnicodeDecodeError\u001b[0m: 'cp949' codec can't decode byte 0xed in position 0: illegal multibyte sequence",
+      "\u001b[0mdecoding with 'cp949' codec failed"
+     ]
+    }
+   ],
+   "source": [
+    "#오류가 생기는 경우 예시\n",
+    "'한글'.encode('utf-8').decode('cp949')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "##자주 사용\n",
+    "\n",
+    "#find\n",
+    "#replace\n",
+    "#capitalize\n",
+    "#split\n",
+    "#count\n",
+    "#join\n",
+    "#upper\n",
+    "#startswitch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#str받아오기\n",
+    "class String:\n",
+    "    def __init__(self,*args):\n",
+    "        self.x=\"\"\n",
+    "        for arg in args:\n",
+    "            self.x += arg\n",
+    "            \n",
+    "    def __len__(self):\n",
+    "        return len(self.x)\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __getitem__(self,idx):\n",
+    "        return self.x[idx]\n",
+    "    \n",
+    "    def __setitem__(self,idx,val):\n",
+    "        self.x[idx]=val\n",
+    "        return self.x\n",
+    "    \n",
+    "    def capitalize(self):\n",
+    "        return chr(ord(self.lower_(self.x)[0])-32)+self.lower_(self.x)[1:]\n",
+    "    \n",
+    "    def upper(self):\n",
+    "        string_=[]\n",
+    "        for i in self.lower_(self.x):\n",
+    "            string_ += chr(ord(i)-32)\n",
+    "        return string_\n",
+    "    \n",
+    "    def lower(self):\n",
+    "        return self.lower_(self.x)\n",
+    "    \n",
+    "    def split(self,sep=\" \"): #sep=separate\n",
+    "        self.x += sep\n",
+    "        string_list = []\n",
+    "        tmp_string = \"\"\n",
+    "        for i in self.x:\n",
+    "            if i != sep:\n",
+    "                tmp_string += i\n",
+    "            else:\n",
+    "                string_list.append(tmp_string)\n",
+    "                tmp_string = []\n",
+    "            return string_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abc'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Str로 묶어놓기\n",
+    "sss = String(\"abc\")\n",
+    "sss.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Abc'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Capitalize - 기본\n",
+    "'abC'.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'한글'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Capitalize - 한글\n",
+    "'한글'.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#알파벳 소문자 코드 확인\n",
+    "ord('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#코드를 알파벳으로 변환\n",
+    "chr(97)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65===>a\n",
+      "66===>b\n",
+      "67===>c\n",
+      "68===>d\n",
+      "69===>e\n",
+      "70===>f\n",
+      "71===>g\n",
+      "72===>h\n",
+      "73===>i\n",
+      "74===>j\n",
+      "75===>k\n",
+      "76===>l\n",
+      "77===>m\n",
+      "78===>n\n",
+      "79===>o\n",
+      "80===>p\n",
+      "81===>q\n",
+      "82===>r\n",
+      "83===>s\n",
+      "84===>t\n",
+      "85===>u\n",
+      "86===>v\n",
+      "87===>w\n",
+      "88===>x\n",
+      "89===>y\n",
+      "90===>z\n"
+     ]
+    }
+   ],
+   "source": [
+    "#코드로 알파벳 조회\n",
+    "for i in range(65,91):\n",
+    "    print(f\"{i}===>{chr(i+32)}\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n",
+      "98\n",
+      "99\n"
+     ]
+    }
+   ],
+   "source": [
+    "#알파벳을 코드로 변환\n",
+    "for i in 'abc':\n",
+    "    print(ord(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "B\n",
+      "C\n"
+     ]
+    }
+   ],
+   "source": [
+    "#소문자 알파벳-코드-대문자 알파벳 변환 원리\n",
+    "for i in 'abc':\n",
+    "    print(chr(ord(i)-32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#소문자 알파벳-코드-대문자 알파벳 변환 원리\n",
+    "string = 'abc'\n",
+    "new_string = ''\n",
+    "for i in string:\n",
+    "    new_string += chr(ord(i)-32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#대문자 변환 메서드 만들기\n",
+    "def upper_case(string):\n",
+    "    new_string = ''\n",
+    "    for i in string:\n",
+    "        new_string += chr(ord(i)-32)\n",
+    "    return new_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ASDF'"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#실제 메서드 사용해보기\n",
+    "upper_case('asdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ASDF%%%'"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#실제 메서드 사용해보기 - [오류]대문자 있을 경우 특수기호문자로 변환됨\n",
+    "upper_case('asdfEEE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#소문자와 대문자 구분 기준 설정하기\n",
+    "ord('a')\n",
+    "#===> 즉, 97보다 크면 소문자 작으면 대문자."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#대문자<->소문자 변환 메서드 만들기 - [오류]해결 버전\n",
+    "def upper_case(string):\n",
+    "    new_string = ''\n",
+    "    for i in string:\n",
+    "        if ord(i) < 97:\n",
+    "            i = chr(ord(i)+32)\n",
+    "        new_string += chr(ord(i)-32)\n",
+    "    return new_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'DDDSSASDF'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#[오류]해결 체크\n",
+    "upper_case('DDDSSasdf')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = String(\"abcD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['asdf', 'fdsa']"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#split - 기본형\n",
+    "\n",
+    "'asdf fdsa'.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['asdf ', ' fdsa aaaa']"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#split - 구분자 사용\n",
+    "\n",
+    "'asdf : fdsa aaaa'.split(\":\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d\n",
+      "f\n",
+      " \n",
+      "d\n",
+      "f\n",
+      " \n",
+      "l\n",
+      "a\n",
+      "l\n"
+     ]
+    }
+   ],
+   "source": [
+    "## split method 만들어보기\n",
+    "\n",
+    "# 1. 한 글자씩 출력\n",
+    "for i in \"df df lal\":\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['aaa', 'bbb']"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#2.\n",
+    "\n",
+    "cnt=1\n",
+    "tmp=''\n",
+    "x=[]\n",
+    "\n",
+    "for i in \"aaa bbb ccc\":\n",
+    "    if i!= \" \":\n",
+    "        tmp += i\n",
+    "    else:\n",
+    "        x.append(tmp)\n",
+    "        tmp=''\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s=String(\"abcd efg hi\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'abcd efg hi '"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s.x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##count\n",
+    "\n",
+    "'babbababababa'.count('aba')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "find_word='aa'\n",
+    "string = 'aaaaaaa'\n",
+    "string.count('aa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (3556410320.py, line 10)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[89], line 10\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "find_word='aba'\n",
+    "string='babababababa'\n",
+    "cnt=0\n",
+    "find_len=len(find_word)\n",
+    "\n",
+    "for i in range(len(string)-find_len-1):\n",
+    "    if string[:find_len] != find_word:\n",
+    "        if string[1:find_len+1] == find_word:\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 처음 - 0:len만큼 word랑 비교\n",
+    "## 못 찾으면 - 1:len만큼 word랑 비교\n",
+    "## 찾았다면 - word의 len만큼 뒤로 넘어가기 + 찾은 건 제거하기\n",
+    "\n",
+    "## 계속 반복, 끝까지 반복"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def join(self,x):\n",
+    "    return"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
