--- a/Day8_240725.ipynb
+++ b/Day8_240725.ipynb
@@ -1246,9 +1246,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "allomyrina",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "allomyrina"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
