add code chap 2_1_3

--- a/numpy/2장/numpy_chapter_2_1_3.ipynb
+++ b/numpy/2장/numpy_chapter_2_1_3.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.18.2'"
+       "'2.0.1'"
       ]
      },
      "execution_count": 2,
@@ -73,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "dtype('int32')"
+       "dtype('int64')"
       ]
      },
      "execution_count": 5,
@@ -316,7 +316,7 @@
       "text/plain": [
        "(array([1.        , 1.11111111, 1.22222222, 1.33333333, 1.44444444,\n",
        "        1.55555556, 1.66666667, 1.77777778, 1.88888889, 2.        ]),\n",
-       " 0.1111111111111111)"
+       " np.float64(0.1111111111111111))"
       ]
      },
      "execution_count": 18,
@@ -372,7 +372,7 @@
     {
      "data": {
       "text/plain": [
-       "(array([1. , 1.9, 2.8, 3.7, 4.6, 5.5, 6.4, 7.3, 8.2, 9.1]), 0.9)"
+       "(array([1. , 1.9, 2.8, 3.7, 4.6, 5.5, 6.4, 7.3, 8.2, 9.1]), np.float64(0.9))"
       ]
      },
      "execution_count": 21,
@@ -515,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
