--- a/numpy/1장/numpy_chapter_1_3.ipynb
+++ b/numpy/1장/numpy_chapter_1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.18.2'"
+       "'2.0.1'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -57,18 +57,19 @@
        "       [3, 4]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "a = np.arange(1,5).reshape(2,2)\n",
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,28 +78,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 4]])"
+       "1457728666288"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b"
+    "id(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1457728667056"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "id(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +127,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +147,7 @@
        "False"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +177,7 @@
        "       [  3,   4]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +198,7 @@
        "       [  3,   4]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,13 +206,6 @@
    "source": [
     "b"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -203,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +243,7 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +272,7 @@
        "array([4, 5, 6, 7, 8])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +292,7 @@
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -299,18 +312,19 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# g와 f라는 함수에 메모리를 공유하느냐? 라는 내용\n",
     "np.may_share_memory(g,f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +342,7 @@
        "array([    4, 99999,     6,     7,     8])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +362,7 @@
        "array([    4, 99999,     6,     7,     8])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +398,7 @@
        "array([    4, 99999,     6,     7,     8])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +418,7 @@
        "True"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +438,7 @@
        "True"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +483,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +512,7 @@
        "True"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +564,7 @@
        "array([1, 2, 3, 4, 5, 6, 7])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +584,7 @@
        "True"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +622,7 @@
        "array([0, 1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +672,7 @@
        "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +701,7 @@
        "2"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +730,7 @@
        "[2, 3]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -745,16 +759,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "np.int64(2)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +797,7 @@
        "array([2, 3])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,16 +824,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "np.int64(2)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -830,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +862,7 @@
        "array([2])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +898,7 @@
        "array([ True,  True,  True, False, False, False, False])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -895,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +918,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -922,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -931,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +963,7 @@
        "array([9080, 9080,    3,    4,    5,    6,    7])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -989,7 +1003,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
