--- a/numpy/2장/numpy_chapter_2_1_4.ipynb
+++ b/numpy/2장/numpy_chapter_2_1_4.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.18.2'"
+       "'2.0.1'"
       ]
      },
      "execution_count": 2,
@@ -91,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "5.0"
+       "np.float64(5.0)"
       ]
      },
      "execution_count": 7,
@@ -118,7 +118,7 @@
     {
      "data": {
       "text/plain": [
-       "5.0"
+       "np.float64(5.0)"
       ]
      },
      "execution_count": 8,
@@ -138,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "5.0"
+       "np.float64(5.0)"
       ]
      },
      "execution_count": 9,
@@ -224,7 +224,7 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "np.float64(1.0)"
       ]
      },
      "execution_count": 13,
@@ -253,7 +253,7 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "np.float64(1.0)"
       ]
      },
      "execution_count": 15,
@@ -282,7 +282,7 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "np.float64(1.0)"
       ]
      },
      "execution_count": 17,
@@ -327,7 +327,7 @@
     {
      "data": {
       "text/plain": [
-       "3.7416573867739413"
+       "np.float64(3.7416573867739413)"
       ]
      },
      "execution_count": 20,
@@ -383,7 +383,7 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "np.float64(1.0)"
       ]
      },
      "execution_count": 23,
@@ -465,7 +465,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9999999999999999"
+       "np.float64(0.9999999999999999)"
       ]
      },
      "execution_count": 28,
@@ -485,7 +485,7 @@
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "np.float64(1.0)"
       ]
      },
      "execution_count": 29,
@@ -496,13 +496,6 @@
    "source": [
     "np.round(np.linalg.norm(v_4_u),10)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -521,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
