add code, comment, divider chap 2-2-2-1

--- a/numpy/2장/numpy_chapter_2_2_2_1.ipynb
+++ b/numpy/2장/numpy_chapter_2_2_2_1.ipynb
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/plain": [
-       "'1.18.2'"
+       "'2.0.1'"
       ]
      },
      "execution_count": 2,
@@ -42,6 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 랭크란?\n",
     "v1 =  np.array([1,2,3,4])"
    ]
   },
@@ -66,11 +67,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---------------------------------------------------------------------------------------"
+   ]
   },
   {
    "cell_type": "code",
@@ -78,6 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 1 - 기본 예제 \n",
     "c = np.array([[1,2,4],[2,4,8]])"
    ]
   },
@@ -110,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "1"
+       "np.int64(1)"
       ]
      },
      "execution_count": 7,
@@ -124,10 +126,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 2 - 똑같은 배열 \n",
+    "c = np.array([[1,2,4],[1,2,4]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(1)"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.matrix_rank(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3 \n",
+    "c = np.array([[1,2,4],[3,6,11]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(2)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.matrix_rank(c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------------------------------------------"
+   ]
   },
   {
    "cell_type": "code",
@@ -168,7 +230,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "np.int64(2)"
       ]
      },
      "execution_count": 10,
@@ -181,11 +243,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---------------------------------------------------------------------------------------"
+   ]
   },
   {
    "cell_type": "code",
@@ -195,7 +257,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "np.float64(0.0)"
       ]
      },
      "execution_count": 11,
@@ -228,11 +290,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---------------------------------------------------------------------------------------"
+   ]
   },
   {
    "cell_type": "code",
@@ -251,7 +313,7 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "np.int64(3)"
       ]
      },
      "execution_count": 14,
@@ -264,11 +326,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---------------------------------------------------------------------------------------"
+   ]
   },
   {
    "cell_type": "code",
@@ -278,7 +340,7 @@
     {
      "data": {
       "text/plain": [
-       "-17.0"
+       "np.float64(-17.0)"
       ]
      },
      "execution_count": 15,
@@ -298,7 +360,7 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "np.int64(3)"
       ]
      },
      "execution_count": 16,
@@ -311,11 +373,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "---------------------------------------------------------------------------------------"
+   ]
   },
   {
    "cell_type": "code",
@@ -356,7 +418,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "np.int64(2)"
       ]
      },
      "execution_count": 19,
@@ -376,7 +438,7 @@
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "np.float64(0.0)"
       ]
      },
      "execution_count": 20,
@@ -387,20 +449,6 @@
    "source": [
     "np.linalg.det(c3)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -419,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
