--- a/numpy/4장/numpy_chapter_4_6_3.ipynb
+++ b/numpy/4장/numpy_chapter_4_6_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.18.2'"
+       "'2.0.1'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function numpy.einsum(*operands, **kwargs)>"
+       "<function einsum at 0x00000151B9F26930>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
        "       [ 50,  66,  84, 104, 126]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "       [255, 430]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "       [255, 430]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,6 +191,35 @@
    "source": []
   },
   {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.random.randn(4,3,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 2)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.einsum(\"ijk->jk\",y).shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -199,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,16 +255,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "98"
+       "np.int64(98)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,16 +282,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "69"
+       "np.int64(69)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,16 +309,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "98"
+       "np.int64(98)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +347,7 @@
        "       [2]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +376,7 @@
        "       [16, 18, 20, 22]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,16 +387,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "98"
+       "np.int64(98)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +423,7 @@
        "array([ 0, 22, 76])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +443,7 @@
        "array([ 0, 22, 76])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +477,7 @@
        "array([20, 23, 26, 29])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +497,7 @@
        "array([20, 23, 26, 29])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +541,7 @@
        "       [2, 4]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +596,7 @@
        "       [ 9, 16]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +617,7 @@
        "       [ 9, 16]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +645,7 @@
        "       [ 6, 16]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +666,7 @@
        "       [ 6, 16]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +694,7 @@
        "       [11, 25]])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +715,7 @@
        "       [11, 25]])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -722,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +761,7 @@
        "       [12, 12]])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -759,7 +788,7 @@
        "array([21, 24])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +808,7 @@
        "array([21, 24])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,16 +826,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "21"
+       "np.int64(21)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,16 +846,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24"
+       "np.int64(24)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -853,7 +882,7 @@
        "array([25, 20])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -864,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +902,7 @@
        "array([25, 20])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +930,7 @@
        "       [2, 2]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,16 +941,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "25"
+       "np.int64(25)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,16 +961,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20"
+       "np.int64(20)"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -981,7 +1010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
