--- a/numpy/5장/numpy_chapter_5_1_3.ipynb
+++ b/numpy/5장/numpy_chapter_5_1_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'1.17.3'"
+       "'2.0.1'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "       [4, 5, 6]], dtype=int32)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
        "       [10, 11, 13]], dtype=int32)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,8 +97,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------------------------------------------------------------------------"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +117,7 @@
        "       [10, 11, 13]], dtype=int32)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +140,7 @@
        "       [10, 11, 13]], dtype=int32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +170,7 @@
        "       [11, 12, 13, 15]], dtype=int32)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,14 +181,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "all the input array dimensions for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 3 and the array at index 1 has size 4\n"
+      "all the input array dimensions except for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 3 and the array at index 1 has size 4\n"
      ]
     }
    ],
@@ -193,15 +200,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "-----------------------------------------------------------------------------------"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3],\n",
+       "       [ 4,  5,  6],\n",
+       "       [ 7,  8,  9],\n",
+       "       [10, 11, 13]], dtype=int32)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.concatenate([a,b], axis=0)\n",
+    "np.append(a,b,0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +249,7 @@
        "       [ 4,  5,  6, 10, 11, 13]], dtype=int32)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +270,7 @@
        "       [ 4,  5,  6, 11, 12, 13, 15]], dtype=int32)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,13 +278,6 @@
    "source": [
     "np.concatenate([a,c], axis=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -257,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,8 +305,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------------------------------------------------------------------------"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +323,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +344,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +395,7 @@
        "       [3, 6]])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +444,7 @@
        "       [3, 6]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,13 +452,6 @@
    "source": [
     "np.stack([x,y], axis=-1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -438,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +488,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +511,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +535,7 @@
        "        [4, 5, 6]]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +571,7 @@
        "array([1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +591,7 @@
        "array([1, 2, 3, 4, 5, 6, 1, 2, 3, 4, 5, 6])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +627,7 @@
        "array([[1, 2, 3, 4, 5, 6, 1, 2, 3, 4, 5, 6]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,9 +652,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kimmi\\AppData\\Local\\Temp\\ipykernel_22076\\2036427324.py:1: DeprecationWarning: `row_stack` alias is deprecated. Use `np.vstack` directly.\n",
+      "  np.row_stack([a,a])\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -633,7 +672,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +697,7 @@
        "       [6, 6]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +732,7 @@
        "       [4, 5, 6]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +758,7 @@
        "        [6, 6]]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +796,7 @@
        "       [3]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +827,7 @@
        "       [4]])"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +851,7 @@
        "       [[3, 4]]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
